2013-12-10  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The bug of calculating the address of each plane in
	  x_display_fill_with() and x_display_copy_lines() is fixed.

	* x.h, fb/x_display_wscons.c, fb/x_display.c:
	  plane_len is added to Display.

2013-12-10  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: x_display_fill_with() and x_display_copy_lines() support 4 bpp.

	* kiklib/configure.in: NSLinkModule is enabled only if no other dynamic
	  loader is found.

2013-12-09  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1, doc/en/README.fb, doc/ja/README.fb, gtk/INSTALL: Updated.

	* fb/x_display.c: plane > 0 => _disp.depth > 0 in put_image_124bpp().

	* x_color_manager.[ch], x_screen.c, vte.c:
	  x_color_manager_change_alpha() -> x_change_true_transbg_alpha().

	* mc_bgtype.c, mlconfig/po/*.po: Transparent => Pseudo transparent.

2013-12-08  Hayaki Saito <user@zuse.jp>

	* c_imagelib.c: Change DECGNL(-) behavior to move the active position to the
	  "beginning" of the next line.

2013-12-07  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c, x_display_wscons.c: 16 color mode by 4 planes is supported
	  on NetBSD/luna68k framebuffer.

	* x_imagelib.c: Sixel loaders for both 1 and 32 bpp are built in on
	  NetBSD and OpenBSD.

	* c_imagelib.c: It is enabled to include c_imagelib.c with SIXEL_1BPP after
	  including it without it.

2013-12-07  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/ml_pty_ssh.c, ml_pty_ssh.c, ml_pty.h, ml_term.c:
	  ml_pty_ssh_new() gets thread safe by directly calling set_use_multi_thread()
	  which was ml_pty_ssh_set_use_multi_thread() originally.

	* ml_pty.h, ml_term.h: OPEN_PTY_ASYNC macro is moved from ml_term.h to ml_pty.h.

2013-12-06  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c: ml_pty_ssh_set_use_multi_thread() is called before and after
	  ml_pty_new().

	* libptyssh/ml_pty_ssh.c: ml_pty_ssh_set_use_multi_thread() which enables or
	  disables multi threading of openssl/libssh2 is added.
